# Legal-Contract-Redline-OpenEnv

./: .gitignore  Dockerfile  README.md  architecture.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
server/: app.py
