[project]
name = "legal-contract-redline"
version = "1.0.0"
description = "RL environment for AI-assisted legal contract redlining and risk identification"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "pyyaml==6.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
