[project]
name = "legal-contract-redline"
version = "1.0.0"
description = "RL environment for AI-assisted legal contract redlining and risk identification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kulwinder Kour"},
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "pyyaml==6.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
